2022-09-23T02:37:31Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3110050191
* notice: last 14d: unq all: 2 34
* notice: prev accum: outdated-unq outdated-all / unq all: 312 492 / 335 527
* notice: next accum: outdated-unq outdated-all / unq all: 322 504 / 344 538
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-09-08] / []

2022-09-22T16:36:15Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3107171670
* notice: last 14d: unq all: 2 35
* notice: prev accum: outdated-unq outdated-all / unq all: 312 492 / 337 529
* notice: next accum: outdated-unq outdated-all / unq all: 312 492 / 335 527
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -2 -3 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2022-09-08 2022-09-22]

2022-09-22T08:33:05Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3103970940
* notice: last 14d: unq all: 4 37
* notice: prev accum: outdated-unq outdated-all / unq all: 312 492 / 336 528
* notice: next accum: outdated-unq outdated-all / unq all: 312 492 / 337 529
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -1 -1 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2022-09-08 2022-09-22]

2022-09-22T02:30:17Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3102460937
* notice: last 14d: unq all: 4 36
* notice: prev accum: outdated-unq outdated-all / unq all: 311 490 / 342 533
* notice: next accum: outdated-unq outdated-all / unq all: 312 492 / 336 528
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -6 -7 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2022-09-07] / [2022-09-08 2022-09-21]

2022-09-21T16:38:27Z: