@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-09-23T02:37:31Z",
+  "timestamp" : "2022-09-23T08:31:47Z",
   "count_outdated" : 504,
   "uniques_outdated" : 322,
   "count" : 538,
-  "uniques" : 344,
+  "uniques" : 345,
   "clones" : [
     {
       "timestamp": "2022-09-09T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 2, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
+      "count": 1,
+      "count_minmax": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ]
     },
     {
       "timestamp": "2022-09-10T00:00:00Z",
@@ -100,6 +100,13 @@
       "timestamp": "2022-09-22T00:00:00Z",
       "count": 3,
       "count_minmax": [ 2, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-09-23T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
     }
