@@ -4,8 +4,8 @@
   "clones": [
     {
       "timestamp": "2022-09-09T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-09-10T00:00:00Z",
@@ -70,6 +70,11 @@
     {
       "timestamp": "2022-09-22T00:00:00Z",
       "count": 3,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2022-09-23T00:00:00Z",
+      "count": 2,
       "uniques": 2
     }
   ]
