@@ -1,3 +1,11 @@
+2022-09-23T08:31:47Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3111394148
+* notice: last 14d: unq all: 2 34
+* notice: prev accum: outdated-unq outdated-all / unq all: 322 504 / 344 538
+* notice: next accum: outdated-unq outdated-all / unq all: 322 504 / 345 538
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -1 -2 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2022-09-09 2022-09-23]
+
 2022-09-23T02:37:31Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3110050191
 * notice: last 14d: unq all: 2 34
